fix: add spacing and animation for social icons

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 * CSS file to hold styles that apply across the application
 */
 
+
 @import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400&family=Montserrat:wght@200;400;600;800&display=swap");
 
 html,
@@ -122,4 +123,21 @@ a:hover {
 img.socialIcon {
   height: 30px;
   width: 30px;
+}
+
+/* add an amazing animation to the social icons */
+@keyframes float {
+  0% {
+    transform: translatey(0px);
+  }
+  50% {
+    transform: translatey(-10px);
+  }
+  100% {
+    transform: translatey(0px);
+  }
+}
+
+img.socialIcon:hover {
+  animation: float 0.8s ease-in-out;
 }
